--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -22,6 +22,7 @@
           <label><input type="radio" name="output" value="speaker" checked><span>Speaker</span></label>
           <label><input type="radio" name="output" value="filter"><span>Filter</span></label>
           <label><input type="radio" name="output" value="ringmod"><span>Ring Mod</span></label>
+          <label><input type="radio" name="output" value="reverb"><span>Reverb</span></label>
           <label><input type="radio" name="output" value="off"><span>Off</span></label>
         </form>
       </div>
