--- a/src/app/ring-modulator/ring-modulator-component.html
+++ b/src/app/ring-modulator/ring-modulator-component.html
@@ -4,7 +4,7 @@
     <div class="column">
       <div class="module">
         <h2>Internal Mod</h2>
-        <app-level-control #modFreq label="LFO Frequency" [style]="dialStyle.green" [divisions]="10" [calAngle]="300"
+        <app-level-control #modFreq label="Mod Freqs" [style]="dialStyle.green" [divisions]="10" [calAngle]="300"
                            [radius]="50" (setLevel)="setFrequency($event)"></app-level-control>
         <app-level-control #modDepth label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300"
                            [radius]="50" (setLevel)="setModDepth($event)"></app-level-control>
