--- a/src/app/synth/synth-component.html
+++ b/src/app/synth/synth-component.html
@@ -3,7 +3,7 @@
                    (output)="setOscOutputTarget($event)"></app-oscillators>
   <app-oscillators #oscillators2 [name]="'Oscillators 2'" [secondary]="true" [filters]="filters" [ringMod]="ringMod" [reverb]="reverb"
                    [numberOfOscillators]="50" (output)="setOsc2OutputTarget($event)"></app-oscillators>
-  <app-filters #filters [numberOfFilters]="50" (output)="setFilterOutputTarget($event)"></app-filters>
+  <app-filters #filters [numberOfFilters]="50" [ringMod]="ringMod" [reverb]="reverb" (output)="setFilterOutputTarget($event)"></app-filters>
   <app-noise [filters]="filters" [numberOfChannels]="50" (output)="setNoiseOutputTarget($event)"></app-noise>
   <app-ring-modulator #ringMod (output)="setRingModOutPutTarget($event)"></app-ring-modulator>
 </div>
