--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -23,6 +23,7 @@
           <label><input type="radio" name="output" value="filter"><span>Filter</span></label>
           <label><input type="radio" name="output" value="ringmod"><span>Ring Mod</span></label>
           <label><input type="radio" name="output" value="reverb"><span>Reverb</span></label>
+          <label><input type="radio" name="output" value="phasor"><span>Phasor</span></label>
           <label><input type="radio" name="output" value="off"><span>Off</span></label>
         </form>
       </div>
