--- a/src/app/filter/filter-component.html
+++ b/src/app/filter/filter-component.html
@@ -23,6 +23,7 @@
         <form #filterOutputToForm>
           <label><input type="radio" name="output" value="speaker"><span>Speaker</span></label>
           <label><input type="radio" name="output" value="ringmod"><span>Ring Mod</span></label>
+          <label><input type="radio" name="output" value="phasor"><span>Phasor</span></label>
           <label><input type="radio" name="output" value="reverb"><span>Reverb</span></label>
           <label><input type="radio" name="output" value="off" checked><span>Off</span></label>
         </form>
