--- a/src/app/phasor/phasor-component.scss
+++ b/src/app/phasor/phasor-component.scss
@@ -8,7 +8,7 @@
   height: fit-content;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   border: solid 1px gray;
   border-radius: 10px;
@@ -19,14 +19,8 @@
   height: fit-content;
 }
 
-
-.align-mod {
-  margin-top: 99px;
-  margin-right: auto;
-  margin-left: auto;
-}
-.osc-width {
-  min-width: 280px;
+.noise-width {
+  min-width: 240px;
 }
 
 .group-container {
@@ -71,7 +65,7 @@
 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   //cursor: pointer;
- // transition: all 0.2s ease-in-out;
+  // transition: all 0.2s ease-in-out;
 }
 
 * {
