--- a/src/app/reverb-component/reverb-component.html
+++ b/src/app/reverb-component/reverb-component.html
@@ -3,7 +3,7 @@
   <div class="group">
     <div class="column">
       <div class="column">
-        <div class="module">
+        <div class="module" style="min-height:214px">
           <app-level-control #attackTime label="Attack Time" [style]="dialStyle.red" [divisions]="10" [calAngle]="300"
                              [radius]="50"
                              (setLevel)="setAttackTime($event)"></app-level-control>
