* Add outputs to reverb and filter to ring mod.

--- a/src/app/ring-modulator/ring-modulator-component.html
+++ b/src/app/ring-modulator/ring-modulator-component.html
@@ -24,6 +24,8 @@
         <h2>Output</h2>
         <form #outputToForm>
           <label><input type="radio" name="output" value="speaker"><span>Speaker</span></label>
+          <label><input type="radio" name="output" value="filter"><span>Filter</span></label>
+          <label><input type="radio" name="output" value="reverb"><span>Reverb</span></label>
           <label><input type="radio" name="output" value="off" checked><span>&nbsp;Off&nbsp;</span></label>
         </form>
       </div>
