--- a/src/app/ring-modulator/ring-modulator-component.html
+++ b/src/app/ring-modulator/ring-modulator-component.html
@@ -11,7 +11,7 @@
         <h2>Waveform</h2>
         <div style="height: 3px;"></div>
         <form #modWaveForm>
-          <label><input type="radio" name="waveform" value="sine" checked><span>Sine</span></label>
+          <label><input type="radio" name="waveform" value="sine" checked><span>Sine&nbsp;&nbsp;&nbsp;</span></label>
           <label><input type="radio" name="waveform" value="square"><span>Square</span></label>
           <label><input type="radio" name="waveform" value="sawtooth"><span>Sawtooth</span></label>
           <label><input type="radio" name="waveform" value="triangle"><span>Triangle</span></label>
