--- a/src/app/reverb-component/reverb-component.html
+++ b/src/app/reverb-component/reverb-component.html
@@ -45,7 +45,7 @@
                              [divisions]="10"
                              (setLevel)="setWetDryBalance($event)"></app-level-control>
           <form #reverbOnOffForm>
-            <label><input type="radio" name="reverb" value="on"><span>On</span></label>
+            <label><input type="radio" name="reverb" value="speaker"><span>Speaker</span></label>
             <label><input type="radio" name="reverb" value="off" checked><span>Off</span></label>
           </form>
         </div>
