--- a/src/app/phasor/phasor-component.html
+++ b/src/app/phasor/phasor-component.html
@@ -10,7 +10,7 @@
         <app-level-control #level label="Level" [style]="dialStyle.blue" [radius]="50" [divisions]="10"
                            (setLevel)="setLevel($event)"></app-level-control>
         <form #phasorOnOffForm>
-          <label><input type="radio" name="phasor" value="on"><span>On</span></label>
+          <label><input type="radio" name="phasor" value="speaker"><span>Speaker</span></label>
           <label><input type="radio" name="phasor" value="off" checked><span>Off</span></label>
         </form>
       </div>
@@ -29,7 +29,7 @@
             <label><input type="radio" name="waveform" value="triangle"><span>Triangle</span></label>
           </form>
           <form #modOnOffForm>
-            <label><input type="radio" name="phasorMod" value="on"><span>On</span></label>
+            <label><input type="radio" name="phasorMod" value=on><span>On</span></label>
             <label><input type="radio" name="phasorMod" value="off" checked><span>&nbsp;Off&nbsp;</span></label>
           </form>
         </div>
