--- a/src/app/analyser/analyser-component.html
+++ b/src/app/analyser/analyser-component.html
@@ -1,8 +1,16 @@
-<canvas
-  #canvas
-  class="canvas"
-  width="640"
-  height="320">
-</canvas>
-<button #start_button>On</button>
-<button #stop_button disabled>Off</button>
+<div class="group-container metallic-button">
+  <h1>Analyser</h1>
+  <div class="group">
+    <div class="column">
+      <div class="module noise-width">
+        <h2>Spectrum</h2>
+        <canvas
+          #canvas
+          class="canvas"
+          width="640"
+          height="320">
+        </canvas>
+      </div>
+    </div>
+  </div>
+</div>
