* Fixed an issue with initial startup on the reverb module. * Auto scale for smaller screen sizes.

--- a/src/app/phasor/phasor-component.html
+++ b/src/app/phasor/phasor-component.html
@@ -1,4 +1,4 @@
-<div class="group-container metallic-button">
+<div class="group-container phasor-width metallic-button">
   <h1>Phasor</h1>
   <div class="group">
     <div class="column">
