--- a/src/app/phasor/phasor-component.scss
+++ b/src/app/phasor/phasor-component.scss
@@ -37,6 +37,10 @@
   justify-content: center;
 }
 
+div.phasor-width {
+  min-width: 580px;
+}
+
 .metallic-button {
   font-size: 14px;
   padding: 6px 16px;
