* Put common css into styles.scss

--- a/src/app/filter/filter-component.html
+++ b/src/app/filter/filter-component.html
@@ -1,4 +1,4 @@
-<div class="group-container metallic-button">
+<div class="group-container filter-height metallic-button">
   <h1>Filters</h1>
   <div class="group">
     <div class="column">
