* Add output to reverb from phasor

--- a/src/app/phasor/phasor-component.html
+++ b/src/app/phasor/phasor-component.html
@@ -11,6 +11,7 @@
                            (setLevel)="setLevel($event)"></app-level-control>
         <form #phasorOnOffForm>
           <label><input type="radio" name="phasor" value="speaker"><span>Speaker</span></label>
+          <label><input type="radio" name="phasor" value="reverb"><span>Reverb</span></label>
           <label><input type="radio" name="phasor" value="off" checked><span>Off</span></label>
         </form>
       </div>
