* Added portamento control

--- a/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
+++ b/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
@@ -74,40 +74,51 @@
         </form>
       </div>
     </div>
-    <div class="module">
-      <h2>Envelope</h2>
-      <app-level-control #attack
-                         label="Attack" [style]="dialStyle.red"
-                         [divisions]="10"
-                         [calAngle]="300"
-                         [radius]="50"
-                         [factor]="3"
-                         (setLevel)="setAttack($event)"></app-level-control>
-      <app-level-control #decay
-                         label="Decay"
-                         [style]="dialStyle.red"
-                         [radius]="50"
-                         [divisions]="10"
-                         [factor]="6"
-                         (setLevel)="setDecayTime($event)"></app-level-control>
-      <app-level-control #sustain
-                         label="Sustain"
-                         [style]="dialStyle.red"
-                         [radius]="50"
-                         [divisions]="10"
-                         (setLevel)="setSustainLevel($event)"></app-level-control>
-      <app-level-control #release
-                         label="Release"
-                         [style]="dialStyle.red"
-                         [radius]="50"
-                         [divisions]="10"
-                         [factor]="6"
-                         (setLevel)="setReleaseTime($event)"></app-level-control>
-      <form #amplitudeEnvelopeOnOffForm>
-        <label><input type="radio" name="envelope" value="on" checked><span>On</span></label>
-        <label><input type="radio" name="envelope" value="off"><span>Off</span></label>
-      </form>
-
+    <div class="column">
+      <div class="module">
+        <h2>Portamento</h2>
+        <app-level-control #portamento
+                           label="Glide" [style]="dialStyle.yellow"
+                           [divisions]="10"
+                           [calAngle]="300"
+                           [radius]="50"
+                           [factor]="1.5"
+                           (setLevel)="setPortamento($event)"></app-level-control>
+      </div>
+      <div class="module">
+        <h2>Envelope</h2>
+        <app-level-control #attack
+                           label="Attack" [style]="dialStyle.red"
+                           [divisions]="10"
+                           [calAngle]="300"
+                           [radius]="50"
+                           [factor]="3"
+                           (setLevel)="setAttack($event)"></app-level-control>
+        <app-level-control #decay
+                           label="Decay"
+                           [style]="dialStyle.red"
+                           [radius]="50"
+                           [divisions]="10"
+                           [factor]="6"
+                           (setLevel)="setDecayTime($event)"></app-level-control>
+        <app-level-control #sustain
+                           label="Sustain"
+                           [style]="dialStyle.red"
+                           [radius]="50"
+                           [divisions]="10"
+                           (setLevel)="setSustainLevel($event)"></app-level-control>
+        <app-level-control #release
+                           label="Release"
+                           [style]="dialStyle.red"
+                           [radius]="50"
+                           [divisions]="10"
+                           [factor]="6"
+                           (setLevel)="setReleaseTime($event)"></app-level-control>
+        <form #amplitudeEnvelopeOnOffForm>
+          <label><input type="radio" name="envelope" value="on" checked><span>On</span></label>
+          <label><input type="radio" name="envelope" value="off"><span>Off</span></label>
+        </form>
+      </div>
     </div>
     <div class="module">
       <h2>Freq Envelope</h2>
