* Added magenta coloured control

--- a/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
+++ b/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
@@ -78,7 +78,7 @@
       <div class="module">
         <h2>Portamento</h2>
         <app-level-control #portamento
-                           label="Glide" [style]="dialStyle.yellow"
+                           label="Glide" [style]="dialStyle.magenta"
                            [divisions]="10"
                            [calAngle]="300"
                            [radius]="50"
